# kufibot.cpp

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.amd64  Dockerfile.cross  Modelfile  README.md  arm64Build.cmake  ctlkufibot  docker-compose.amd64.yml  docker-compose.cross.yml  docker-compose.yml  kufiDev.sh  kufibot-wrapper.sh  kufibot.service  main.cpp  publisher.cpp  publisher.h  runKufi.sh  subscriber.h
config/: ai_config.json  config_paths.json  gesture_config.json  gesture_config_tr.json  joint_angles.json  motion_definitions.json  rag_dataset_tr.json  reaction_set_tr.json
controllers/: compass_controller.cpp  compass_controller.h  curl_controller.cpp  curl_controller.h  dc_motor_controller.cpp  distance_controller.cpp  distance_controller.h  execution_controller.cpp  execution_controller.h  power_controller.cpp  servo_motor_controller.cpp  speech_process_controller.cpp  speech_process_controller.h  speech_recognition_controller.cpp  speech_recognition_controller.h
design/: class_diagram.excalidraw  software_desing.excalidraw  state_diagram.excalidraw
drivers/: ina219_driver.h  median_filter.h  pca9685_driver.cpp  qmc5883l_driver.h  qmc588l_driver.cpp
gemini/: image_query.py  query.py  tunning.py
lib/: libespeak-ng.so.1.52.0.1  libfinal.la  libmediapipe.so-2.params  libmediapipe.so.runfiles_manifest  libpiper_phonemize.so.1.2.0  libwiringPi.so.3.16  libwiringPiDev.so.3.16
services/: interactive_chat_service.cpp  interactive_chat_service.h  mapping_service.cpp  mapping_service.h  remote_connection_service.cpp  remote_connection_service.h  robot_controller_service.cpp  robot_controller_service.h  service.cpp  service.h  video_stream_service.cpp  video_stream_service.h  web_socket_service.cpp  web_socket_service.h
sounds/: testSound.sh
src/: gesture_defs.h  logger.cpp  logger.h  main.cpp  public_data_messages.h  publisher.cpp  publisher.h  state_machine.cpp  state_machine.h  subscriber.cpp  (+1 more)
src/controllers/: CMakeLists.txt  compass_controller.cpp  compass_controller.h  controller.h  controller_data_structures.h  curl_controller.cpp  curl_controller.h  dc_motor_controller.cpp  dc_motor_controller.h  distance_controller.cpp  distance_controller.h  execution_controller.cpp  execution_controller.h  llama_controller.cpp  llama_controller.h  power_controller.cpp  power_controller.h  servo_motor_controller.cpp  servo_motor_controller.h  speech_process_controller.cpp  speech_process_controller.h  speech_recognition_controller.cpp  speech_recognition_controller.h
src/drivers/: CMakeLists.txt  driver.h  driver_data.h  hmc5883l_driver.cpp  hmc5883l_driver.h  i2c_device.cpp  i2c_device.h  ina219_driver.cpp  ina219_driver.h  median_filter.cpp  median_filter.h  pca9685_driver.cpp  pca9685_driver.h  qmc5883l_driver.cpp  qmc5883l_driver.h
src/operators/: CMakeLists.txt  IUdpSocket.cpp  IUdpSocket.h  UdpServerSocket.cpp  UdpServerSocket.h  cmdline_execution_operator.cpp  cmdline_execution_operator.h  face_gesture_recognizer.h  face_gesture_recognizing_operator.cpp  face_gesture_recognizing_operator.h  hand_gesture_recognizing_operator.cpp  hand_gesture_recognizing_operator.h  http_request_operator.cpp  http_request_operator.h  json_parser_operator.cpp  json_parser_operator.h  llama_operator.cpp  llama_operator.h  operator.h  speech_performing_operator.cpp  speech_performing_operator.h  speech_recognizing_operator.cpp  speech_recognizing_operator.h  udp_server_operator.cpp  udp_server_operator.h  video_operator.cpp  video_operator.h  web_socket_operator.cpp  web_socket_operator.h
src/operators/python_modules/: face_gesture_recognition_module.py
src/processors/: CMakeLists.txt  face_gesture_recognition_module.py  face_gesture_recognizer.cpp  hand_gesture_recognition_module.py  hand_gesture_recognizer.cpp  hand_gesture_recognizer.h
src/services/: CMakeLists.txt  expression_service.cpp  expression_service.h  gesture_performer_service.cpp  gesture_performer_service.h  gesture_performing_service.cpp  gesture_performing_service.h  gesture_recognizer_service.cpp  gesture_recognizer_service.h  gesture_service.cpp  gesture_service.h  interactive_chat_service.cpp  interactive_chat_service.h  landmark_tracker_service.cpp  landmark_tracker_service.h  landmark_tracking_service.cpp  landmark_tracking_service.h  mapping_service.cpp  mapping_service.h  perception_service.cpp  perception_service.h  rag_service.cpp  rag_service.h  remote_connection_service.cpp  remote_connection_service.h  robot_controller_service.cpp  robot_controller_service.h  service.cpp  service.h  tui_service.cpp  tui_service.h  ui_service.cpp  ui_service.h  video_stream_service.cpp  video_stream_service.h  voice_agent_service.cpp  voice_agent_service.h  web_socket_service.cpp  web_socket_service.h
src/services/statemachines/: robot_state_machine.cpp  robot_state_machine.h
src/statemachines/: CMakeLists.txt  critical_error_state.cpp  critical_error_state.h  event.cpp  event.h  idle_state.cpp  idle_state.h  initialize_state.cpp  initialize_state.h  listening_state.cpp  listening_state.h  mapping_state.cpp  mapping_state.h  moving_state.cpp  moving_state.h  remote_control_state.cpp  remote_control_state.h  robot.cpp  robot.h  state.cpp  state.h  state_machine.cpp  state_machine.h  talking_state.cpp  talking_state.h  tracking_state.cpp  tracking_state.h  tui_control_state.cpp  tui_control_state.h
src/tui/: CMakeLists.txt  body_controller_window.cpp  body_controller_window.h  chat_window.cpp  chat_window.h  compass_rt_graph_window.cpp  compass_rt_graph_window.h  graph_window.cpp  graph_window.h  main_window.cpp  main_window.h  measurements_window.cpp  measurements_window.h  servo_controller_window.cpp  servo_controller_window.h  sub_window.cpp  sub_window.h  widget_color_theme.cpp
src/ui/: CMakeLists.txt  body_controller_window.cpp  body_controller_window.h  chat_window.cpp  chat_window.h  graph_window.cpp  graph_window.h  main_window.cpp  main_window.h  measurements_window.cpp  measurements_window.h  servo_controller_window.cpp  servo_controller_window.h  sub_window.cpp  sub_window.h  widget_color_theme.h
(+8 files in other folders)
